# Self-Balancing-Robot

./: .gitignore  .gitmodules  README.md  fd.c
cad_files/: Electronics_Shelf_[V10.stl  Hub_[V10_ENLARGED.stl  Motor_Shelf_[V10.stl  Regular_Arm_[V10_MG90S.stl  Side_Panel_[V10.stl  Top_Shelf_[V10.stl  Wheel_[V10.stl
controllers_old/: CMakeLists.txt
controllers_old/src/: lqr.cpp
coppeliasim_simulation/: self_balancing_robot (copy).ttt  self_balancing_robot.ttt  twip.urdf  vrep_self_balancing.ttt
coppeliasim_simulation/urdf_from_coppelia/: twip.urdf
docker_file/integrated_gpu/: dockerfile
docker_file/nvidia/: dockerfile
docker_file/nvidia_cuda/: dockerfile
installation/conda/: mamba_environment.yml
matlab_simulation/: euler_integration_fun.m  extended_kalman.m  fine backward pass.ps  forward_dynamic_fun.asv  forward_dynamic_fun.m  forward_dynamic_fun.prj  get_dynamic_parameters_fun.m  ilqr.asv  ilqr_fun.asv  ilqr_fun.m  linear_quadratic_regulator.asv  linear_quadratic_regulator.m  linearization_discretization_fun.asv  linearization_discretization_fun.m  linearization_fun.m  main.asv  main.m  rk_integration_fun.asv  rk_integration_fun.m  sliding_mode_fun.m
matlab_simulation/estimators/: extended_kalman.m
matlab_simulation/integrators/: euler_integration_fun.m  rk_integration_fun.m
python_scripts/: euler_integration.py  forward_dynamics.py  robot_model.py  robot_model_jax.py  twip_dynamics.py  twip_dynamics_jax.py
python_scripts/brax/: test.py
python_scripts/controllers/: adaptive_lqr.py  ilqr.py  least_square_lqr.py  lqi.py  lqr.py  pid.py  predictive_sampling.py  sliding_mode.py
python_scripts/state_estimators/: extended_kalman_filter.py
ros2_ws/src/state_estimator/: CMakeLists.txt
vrep_scene/: vrep_self_balancing.ttt
(+165 files in other folders)
